[package]
name = "rust-spectre"
version = "0.1.0"
edition = "2021"

[profile.dev]
overflow-checks = false
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[[bin]]
name = "rust-spectre"  # You can choose a custom name for your binary
path = "src/main.rs"
